--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -280,7 +280,7 @@ img {
 
 .home__content {
    grid-template-columns: .5fr 3fr;
-   padding-top: 3.5rem;
+   padding-top: 1rem;
    align-items: center;
 }
 
@@ -305,7 +305,7 @@ img {
 }
 
 .home__blob-img {
-   width: 170px;
+   width: 250px;
 }
 
 .home__data {
@@ -364,6 +364,18 @@ img {
    padding: 1rem;
    border-radius: .5rem;
    font-weight: var(--font-medium);
+}
+
+button {
+   display: inline-block;
+   background-color: var(--first-color);
+   color: #FFF;
+   padding: 1rem;
+   border-radius: .5rem;
+   font-weight: var(--font-medium);
+   border: 0;
+   font: var(--font-medium);
+   cursor: pointer;
 }
 
 .button:hover {
@@ -539,26 +551,18 @@ img {
    width: 60%;
 }
 
-.skills__react {
-   width: 85%;
+.skills__bootstrap {
+   width: 80%;
 }
 
 /* Skills 2 */
 
 .skills__php {
-   width: 80%;
+   width: 60%;
 }
 
-.skills__node {
-   width: 70%;
-}
-
-.skills__firebase {
-   width: 50%;
-}
-
-.skills__python {
-   width: 75%;
+.skills__database {
+   width: 60%;
 }
 
 /* Skills 3 */
@@ -568,12 +572,26 @@ img {
 }
 
 .skills__figma {
-   width: 70%;
+   width: 85%;
 }
 
 .skills__ae {
-   width: 50%;
+   width: 60%;
 }
+
+/* Skills 4 */
+.skills__manajemen{
+   width: 80%;
+}
+
+.skills__tim{
+   width: 85%;
+}
+
+.skills__komunikasi{
+   width: 95%;
+}
+
 
 .skills__close .skills__list {
    height: 0;
@@ -938,6 +956,40 @@ img {
    outline: none;
    padding: .25rem .5rem .5rem 0;
 }
+#status{
+   width: 100%;
+   max-width: 500px;
+   text-align: center;
+   padding: 10px;
+   margin: 0 auto;
+   border-radius: .4rem;
+}
+
+.contact__succsess{
+   background-color: var(--first-color);
+   color: #FFF;
+   animation: status 4s ease forwards;
+}
+
+.contact__error{
+   background-color: var(--first-color);
+   color: #DC143C;
+   animation: status 4s ease forwards;
+}
+@keyframes status{
+   0%{
+      opacity: 1;
+      pointer-events: all;
+   }
+   90%{
+      opacity: 1;
+      pointer-events: all;
+   }
+   100%{
+      opacity: 0;
+      pointer-events: none;
+   }
+}
 
 /*==================== FOOTER ====================*/
 
@@ -1136,6 +1188,9 @@ img {
    .header, .main, .footer__container {
       padding: 0 1rem;
    }
+   .home{
+      margin-top: -50px;
+   }
    .nav {
       height: calc(var(--header-height) + 1.5rem);
       column-gap: 1rem;
@@ -1165,6 +1220,7 @@ img {
    }
    .home__scroll {
       display: block;
+      margin-top: -2.5rem;
    }
    .home__scroll-button {
       margin-left: 3rem;
@@ -1178,9 +1234,9 @@ img {
    .about__description {
       text-align: initial;
    }
-   .about__info {
+   /* .about__info {
       justify-content: space-between;
-   }
+   } */
    .about__buttons {
       justify-content: initial;
    }
@@ -1251,6 +1307,9 @@ img {
 @media screen and (min-width: 1024px) {
    .header, .main, .footer__container {
       padding: 0;
+   }
+   .home{
+      margin-top: -100px;
    }
    .home__blob {
       width: 320px;
