--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -864,7 +864,7 @@ button {
 }
 
 .project__img {
-   width: 232px;
+   width: 300px;
    justify-self: center;
 }
 
@@ -1227,6 +1227,7 @@ button {
    }
    .about__container {
       column-gap: 5rem;
+      margin-top: -2rem;
    }
    .about__img {
       width: 350px;
@@ -1234,9 +1235,10 @@ button {
    .about__description {
       text-align: initial;
    }
-   /* .about__info {
-      justify-content: space-between;
-   } */
+   .about__info {
+      /* justify-content: space-between; */
+      margin-top: -1rem;
+   }
    .about__buttons {
       justify-content: initial;
    }
@@ -1318,7 +1320,7 @@ button {
       transform: translateX(-6rem);
    }
    .services__container{
-      grid-template-columns: repeat(3, 238px);
+      grid-template-columns: repeat(2, 238px);
    }
    .portfolio__content{
       column-gap: 5rem;
