--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,6 +50,8 @@
   --z-tooltip: 10;
   --z-fixed: 100;
   --z-modal: 1000;
+  /*========== Text Align ==========*/
+  --text-align:left;
 }
 
 /* Font size for large devices */
@@ -116,6 +118,7 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
+  border-left: 1px solid #000'
 }
 
 h1,
@@ -158,6 +161,14 @@ img {
 .section__title,
 .section__subtitle {
   text-align: center;
+}
+
+.text__left {
+  text-align: left;
+}
+
+.text__right {
+  text-align: right;
 }
 
 /*==================== LAYOUT ====================*/
@@ -223,6 +234,14 @@ img {
     border-radius: 1.5erm 1.5rem 0 0;
     transition: 0.3s;
   }
+
+  /* SOCIAL BLM BISA KANAN KIRI KALAY LAYAR KECIL */
+
+  .home__social {
+    display:inline;
+    grid-template-columns: max-content;
+    row-gap: 1rem;
+  }
 }
 
 .nav__list {
@@ -285,16 +304,11 @@ img {
 }
 
 .home__content {
-  /* grid-template-columns: 0.5fr 3fr; */
   padding-top: 1rem;
   align-items: center;
 }
 
-.home__social {
-  /* display: grid; */
-  grid-template-columns: max-content;
-  row-gap: 1rem;
-}
+
 
 .home__social-icon {
   font-size: 1.25rem;
@@ -462,6 +476,10 @@ button {
 .about__info-name {
   display: block;
   text-align: center;
+}
+
+.about__experience {
+  max-width: 150px;
 }
 
 .about__buttons {
@@ -703,7 +721,7 @@ button {
 .services__content {
   position: relative;
   background-color: var(--container-color);
-  padding: 3.5rem 0.5rem 1.25rem 1.5rem;
+  padding: 3.5rem 1.5rem 1.25rem 1.5rem;
   border-radius: 0.25rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
   transition: 0.3s;
@@ -1134,10 +1152,6 @@ button {
     column-gap: 0;
   }
 
-  .home__content {
-    grid-template-columns: 0.25fr 3fr;
-  }
-
   .home__blob {
     width: 180px;
   }
@@ -1187,18 +1201,8 @@ button {
 /* For medium devices */
 
 @media screen and (min-width: 568px) {
-  .home__content {
-    grid-template-columns: max-content 1fr 1fr;
-  }
 
-  .home__data {
-    grid-column: initial;
-  }
-
-  .home__img {
-    order: 1;
-    justify-self: center;
-  }
+  
 
   .about__container,
   .skills__container,
@@ -1217,6 +1221,25 @@ button {
 }
 
 @media screen and (min-width: 768px) {
+
+  .home__social {
+    display:grid;
+    grid-template-columns: max-content;
+    row-gap: 1rem;
+  }
+  
+  .home__content {
+    grid-template-columns: max-content 1fr 1fr;
+  }
+  .home__data {
+    grid-column: initial;
+  }
+
+  .home__img {
+    order: 1;
+    justify-self: center;
+  }
+  
   .container {
     margin-left: auto;
     margin-right: auto;
@@ -1339,7 +1362,7 @@ button {
   }
 
   .services__content {
-    padding: 6rem 0 2rem 2.5rem;
+    padding: 6rem 1.5rem 2rem 1.5rem;
   }
 
   .services__modal-content {
@@ -1414,8 +1437,8 @@ button {
   }
 
   .home__social {
-    transform: translateX(-6rem);
-      display: grid;
+    /* transform: translateX(-6rem); */
+    display: grid;
   }
 
   .services__container {
